fix config